appointment/src/objects/Customer__c.object
<CustomObject>
    <description>Customer is the person we are scheduling.</description>
    <fields>
        <fullName>Allergies_To_Medication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allergies To Medication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allergies__c</fullName>
        <label>Allergies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Allergy_Reactions__c</fullName>
        <label>Allergy Reactions</label>
        <picklist>
            <picklistValues>
                <fullName>Cosmetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hormones</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <formula>/*
IF(ISBLANK(Anniversary_Month__c) || ISBLANK(Anniversary_Day__c), NULL, DATE(YEAR(TODAY()) ,TEXT(Anniversary_Month__c),TEXT(Anniversary_Day__c) ) )
*/
TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anniversary_Day__c</fullName>
        <description>Anniversay day for the client</description>
        <inlineHelpText>Enter Anniversay day for you client</inlineHelpText>
        <label>Anniversary Day</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Anniversary_Month__c</fullName>
        <description>Enter the month client celebrates anniversay</description>
        <inlineHelpText>Enter month client celebrates anniversary.</inlineHelpText>
        <label>Anniversary Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <formula>/*
IF(ISBLANK(Birth_Month__c)  || ISBLANK(Birth_Day__c), NULL, DATE(YEAR(TODAY()) ,TEXT(Birth_Month__c),TEXT(Birth_Day__c) ) )
*/
TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birth_Day__c</fullName>
        <label>Birth Day</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_Month__c</fullName>
        <label>Birth Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Last Perm Brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Customer&apos;s city address.</description>
        <inlineHelpText>Enter customer&apos;s city.</inlineHelpText>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Customer comments.</description>
        <inlineHelpText>Enter comments about the Customer.</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conditioner__c</fullName>
        <label>Conditioner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Notification__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check if customer receives email notifications.</description>
        <inlineHelpText>Check if customer receives email notifications.</inlineHelpText>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Customer&apos;s Email address.</description>
        <inlineHelpText>Enter Customer&apos;s Email address.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Customer&apos;s first name</description>
        <inlineHelpText>Enter customer&apos;s first name.</inlineHelpText>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Then_Last_Name__c</fullName>
        <formula>IF(AND(ISBLANK(First_Name__c ),ISBLANK(Last_Name__c )), 
NULL, 
IF(ISBLANK(First_Name__c ), TRIM(Last_Name__c), TRIM(First_Name__c) &amp; &quot;, &quot; &amp; TRIM(Last_Name__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>If recurring is checked what frequency will the system us to schedule an appointment.</description>
        <inlineHelpText>Select frequency when Recurring is checked.</inlineHelpText>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Every Week</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Every Two Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Three Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Four Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Five Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Six Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Seven Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Eight Weeks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gels__c</fullName>
        <label>Gels</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hair_Color_Treatments__c</fullName>
        <label>Hair Color Treatments</label>
        <picklist>
            <picklistValues>
                <fullName>Permanent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Permanent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bleached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frosted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highlighted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metallic Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hair_Condition__c</fullName>
        <label>Hair Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hair_Spray__c</fullName>
        <label>Hair Spray</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Customer&apos;s home phone</description>
        <inlineHelpText>Enter customer&apos;s home phone number.</inlineHelpText>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Appointment_Date__c</fullName>
        <description>Date of last appointment.</description>
        <inlineHelpText>Enter date of last appointment.</inlineHelpText>
        <label>Last Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Customer&apos;s last name.</description>
        <inlineHelpText>Enter Customer&apos;s last name.</inlineHelpText>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Perm__c</fullName>
        <label>Last Perm</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Then_First_Name__c</fullName>
        <formula>IF(AND(ISBLANK(Last_Name__c ),ISBLANK(First_Name__c )), 
NULL, 
IF(ISBLANK(Last_Name__c ), TRIM(First_Name__c), TRIM(Last_Name__c) &amp; &quot;, &quot; &amp; TRIM(First_Name__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>Mailing State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Customer&apos;s mobile/cell phone.</description>
        <inlineHelpText>Enter Customer&apos;s mobile/cell phone.  Include area code.</inlineHelpText>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Natural_Base_Level__c</fullName>
        <label>Natural Base Level</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <description>Customer&apos;s office phone.</description>
        <inlineHelpText>Enter Customer&apos;s office phone.</inlineHelpText>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Perms__c</fullName>
        <label>Perms</label>
        <picklist>
            <picklistValues>
                <fullName>Acid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alkaline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exothermic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Personal_Hair_Other__c</fullName>
        <label>Personal Hair Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Hair_Treatment__c</fullName>
        <label>Personal Hair Treatment</label>
        <picklist>
            <picklistValues>
                <fullName>Cut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bleach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rinse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Porosity__c</fullName>
        <label>Porosity</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring_End_Date__c</fullName>
        <label>Recurring End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recurring_Start_DT__c</fullName>
        <label>Recurring Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Recurring_Start_Date__c</fullName>
        <label>Recurring Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating that the customer has recurring appointments.  If checked then the system looks at frequency, time of day, start date and default service.</description>
        <inlineHelpText>Check if this customer desires to have recurring appointments.</inlineHelpText>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relaxer_Date__c</fullName>
        <label>Relaxer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relaxer__c</fullName>
        <label>Relaxer</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Super</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mild</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scalp_Condition__c</fullName>
        <label>Scalp Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>Default Service.  If chosen used to determine length of time for recurring appointments.</description>
        <inlineHelpText>Enter Service to be performed if Recurring is checked.</inlineHelpText>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shampoo__c</fullName>
        <label>Shampoo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <label>Staff</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Customer Status</description>
        <inlineHelpText>Enter Customer&apos;s Status.  Default is Active.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Customer&apos;s street address.</description>
        <inlineHelpText>Enter customer&apos;s street address.</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if customer receives mobile text messages</description>
        <inlineHelpText>Check if customer receives mobile text messages.</inlineHelpText>
        <label>Text Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Texture__c</fullName>
        <label>Texture</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Customer&apos;s salutation</description>
        <inlineHelpText>Select customer&apos;s salutation.</inlineHelpText>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tonal_Value__c</fullName>
        <label>Tonal Value</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Customer zip code.</description>
        <inlineHelpText>Enter customer&apos;s zip code.</inlineHelpText>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Customer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>